--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        android:theme="@style/AppTheme.NoActionBar">
         <activity android:name=".BuildingListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,8 +17,7 @@
         </activity>
         <activity
             android:name=".RoomListActivity"
-            android:label="@string/title_activity_room_list"
-            />
+            android:label="@string/title_activity_room_list" />
     </application>
 
 </manifest>
